# whisper_ui_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  git_wrapper
cli/: main.cpp
core/: confidence.cpp  confidence.h  event_queue.h  languages.cpp  languages.h  model_loader.cpp  model_loader.h  output_format.cpp  output_format.h  settings.cpp  settings.h  transcribe.cpp  transcribe.h
core/audio/: capture.cpp  capture.h  capture_alsa.cpp  capture_backends.h  capture_convert.cpp  capture_convert.h  capture_jack.cpp  capture_usb.cpp  capture_wasapi.cpp  file_reader.cpp  file_reader.h
gui/: app.cpp  app.h  fonts.cpp  fonts.h  host.hh  main.cc  recorder_controller.cpp  recorder_controller.h  theme.h  views.cpp  views.h
gui/os/: wayland_host.cc  win32_host.cc
resources/: app.manifest  app.rc
scripts/linux/: build.sh
scripts/windows/: build.bat
src/: config.cpp  config.h  led_control.cpp  led_control.h  main.cpp  resource.h  window.cpp  window.h
src/audio/: device_enum.cpp  device_enum.h  device_notify.cpp  device_notify.h  file_reader.cpp  file_reader.h  wasapi_capture.cpp  wasapi_capture.h
src/inference/: confidence.cpp  confidence.h  model_loader.cpp  model_loader.h  output_format.cpp  output_format.h  transcribe.cpp  transcribe.h
src/ui/: language_combo.cpp  language_combo.h  language_picker.cpp  language_picker.h  mic_picker.cpp  mic_picker.h  result_dialog.cpp  result_dialog.h  settings_dlg.cpp  settings_dlg.h
tests/: capture_convert_test.cpp  event_queue_test.cpp  file_reader_test.cpp  harness.hpp  output_format_test.cpp  recorder_controller_test.cpp  settings_test.cpp  test_main.cpp
tools/ui_capture/: main.cc
